--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=9898
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/postgres_javi
+spring.datasource.username=admin
+spring.datasource.password=secret
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
